# Visual-Analytics

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build_backend.yml  django_tests.yml  ruff.yaml
demo/: annotation_demo.py  file_upload.py  get_teams.py  get_videos.py  image_pagination.py  situation.py  slice.py
demo/usecases/: image_count.py
deployment/backup/: README.md
deployment/docs/: Chart.yaml
deployment/grafana/: values.yaml
deployment/mlflow/: Chart.yaml  values.yaml
deployment/monitoring/: Chart.yaml  README.md  values.yaml
deployment/postgres/: values.yaml
deployment/prometheus/: Chart.yaml  README.md
django/: .env.dev.example  docker-compose.yml  requirements.txt  restore.py  setup.cfg
django/annotation/: admin.py  annotation_filter.py  models.py  serializers.py  urls.py  views.py
django/behavior/: admin.py  views.py
django/cognition/: admin.py  models.py  serializers.py  views.py
django/common/: admin.py  filter.py  models.py  serializers.py  urls.py  views.py
django/core/: generic_filter.py  middleware.py  pagination.py  settings.py  urls.py  utils.py
django/frontend/: urls.py  views.py
django/image/: admin.py  image_filter.py  models.py  serializers.py  urls.py  views.py
django/motion/: admin.py  models.py  views.py
django/user/: adapters.py  admin.py  apps.py  permission.py  roles.py  (+4 more)
docs/: dev-setup.md
frontend/: components.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.js
utils/: backup.py  dbubtils.sh
(+126 files in other folders)
