[project]
name = "visual-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.10.0",
    "django==5.2.7",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-redis>=6.0.0",
    "django-unfold==0.69.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-api-key==3.*",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-orjson-renderer>=1.7.3",
    "drf-spectacular>=0.28.0",
    "gunicorn==23.0.0",
    "inflection>=0.5.1",
    "numpy==2.2.6",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "sqlparse>=0.5.3",
    "tzdata==2024.2",
    "uritemplate>=4.2.0",
    "whitenoise==6.9.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
    "ruff==0.12.3",
    "factory-boy==3.3.3",
    "pytest-django==4.11.1",
]
